--- a/Realtor-App/Base.lproj/Main.storyboard
+++ b/Realtor-App/Base.lproj/Main.storyboard
@@ -1,25 +1,169 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="8cM-ww-jEc">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Summary-->
+        <scene sceneID="pHE-qv-TjE">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="o5a-Th-enM" userLabel="Summary" customClass="SummaryVC" customModule="Realtor_App" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="zAw-wO-owS"/>
+                        <viewControllerLayoutGuide type="bottom" id="UI6-Qz-Hyc"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="FEo-9c-YCl">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" title="Summary" id="zpQ-cq-7Ay"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="y06-hh-SoM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1647" y="736"/>
+        </scene>
+        <!--Home List-->
+        <scene sceneID="RgM-Lf-Cfs">
+            <objects>
+                <viewController id="rLn-dZ-b46" userLabel="Home List" customClass="HomeListVC" customModule="Realtor_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="1yG-L7-uXw"/>
+                        <viewControllerLayoutGuide type="bottom" id="DFG-Sh-Ov8"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="9dI-0k-FFI">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="yeu-d4-5NO" userLabel="For Sale, Sold">
+                                <rect key="frame" x="236" y="85" width="129" height="29"/>
+                                <segments>
+                                    <segment title="For Sale"/>
+                                    <segment title="Sold"/>
+                                </segments>
+                            </segmentedControl>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="ZsJ-Aj-UjX">
+                                <rect key="frame" x="0.0" y="134" width="600" height="417"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zM7-VL-9gt">
+                                        <rect key="frame" x="0.0" y="28" width="600" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zM7-VL-9gt" id="8ZN-Z3-EbP">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ZsJ-Aj-UjX" secondAttribute="trailing" constant="-20" id="JsR-bc-px3"/>
+                            <constraint firstItem="ZsJ-Aj-UjX" firstAttribute="leading" secondItem="9dI-0k-FFI" secondAttribute="leadingMargin" constant="-20" id="MTx-Ob-WmE"/>
+                            <constraint firstItem="DFG-Sh-Ov8" firstAttribute="top" secondItem="ZsJ-Aj-UjX" secondAttribute="bottom" id="N2R-1W-UeJ"/>
+                            <constraint firstItem="yeu-d4-5NO" firstAttribute="top" secondItem="1yG-L7-uXw" secondAttribute="bottom" constant="21" id="N8K-qo-dwo"/>
+                            <constraint firstItem="ZsJ-Aj-UjX" firstAttribute="top" secondItem="yeu-d4-5NO" secondAttribute="bottom" constant="21" id="k7A-6g-ZwZ"/>
+                            <constraint firstItem="yeu-d4-5NO" firstAttribute="centerX" secondItem="9dI-0k-FFI" secondAttribute="centerX" id="lkX-qV-FTp"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Home List" id="DWx-Iw-uLD" userLabel="Home List">
+                        <barButtonItem key="rightBarButtonItem" title="Filter" id="B9o-uN-Ch8">
+                            <connections>
+                                <segue destination="Dhs-TS-LZL" kind="show" id="uQQ-R7-Vvx"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2kF-qX-Q6u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1647" y="75"/>
+        </scene>
+        <!--Table View Controller-->
+        <scene sceneID="FO3-t5-sKU">
+            <objects>
+                <tableViewController id="Dhs-TS-LZL" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="HmG-Cm-9IV">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="86i-h9-oh7">
+                                <rect key="frame" x="0.0" y="92" width="600" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="86i-h9-oh7" id="jCz-J7-HtE">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="Dhs-TS-LZL" id="ZMn-rE-Okr"/>
+                            <outlet property="delegate" destination="Dhs-TS-LZL" id="pwS-Pa-7d2"/>
+                        </connections>
+                    </tableView>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fLY-rQ-SqM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2436" y="75"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="947-2T-xNY">
+            <objects>
+                <tabBarController id="8cM-ww-jEc" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="7cu-lR-TvG">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="ZsP-ea-9K3" kind="relationship" relationship="viewControllers" id="Hd9-dJ-9LT"/>
+                        <segue destination="rSS-S0-UId" kind="relationship" relationship="viewControllers" id="mNh-AC-udD"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IFD-tx-kWI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="15" y="406"/>
+        </scene>
+        <!--Home List-->
+        <scene sceneID="Dwp-Tg-8pr">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ZsP-ea-9K3" userLabel="Home List" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Home List" id="jbC-uU-2lD" userLabel="Home List"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B3B-ZL-6uo">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rLn-dZ-b46" kind="relationship" relationship="rootViewController" id="tHw-uQ-52U"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vOU-6K-NaL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="835" y="75"/>
+        </scene>
+        <!--Summary-->
+        <scene sceneID="xW1-4b-fBS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="rSS-S0-UId" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Summary" id="G74-ic-T8X" userLabel="Summary"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6LQ-F8-wbV">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="o5a-Th-enM" kind="relationship" relationship="rootViewController" id="QRQ-qI-5oJ"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7Cm-6w-on3" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="835" y="736"/>
         </scene>
     </scenes>
 </document>
